fix alignment of sidebar with title

--- a/_sass/components/partners/_partners.scss
+++ b/_sass/components/partners/_partners.scss
@@ -7,6 +7,7 @@
 
 .partners-title {
     font-size: 2.5em;
+    width: 100%;
 }
 
 .partners-border {
